[package]
name = "actix-example"
version = "0.1.0"
authors = ["chamatht <cham@bits64.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0-alpha.3"
actix-rt = "1.0.0-alpha.3"
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
tera = "1.0.0-beta.21"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[profile.release]
lto=true
opt-level=2
