[package]
name = "actix-pastebin"
version = "0.1.0"
authors = ["chamatht <cham@bits64.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0-alpha.4"
actix-rt = "1.0.0"
env_logger = "0.7.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
tera = "1.0.2"
tokio-postgres = "0.5.1"
tokio = "0.2.13"
jemallocator = "0.3.2"

[profile.release]
lto=true
opt-level=2
